Make standalone work again